--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+
   "dependencies": {
     "express": "~4.9.0",
     "body-parser": "~1.8.1",
@@ -12,6 +13,17 @@
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
-    "jade": "~1.6.0"
+    "jade": "~1.6.0",
+    "async": "*",
+    "request": "*"
+  },
+
+  "devDependencies": {
+      "grunt": "~0.4.5",
+      "grunt-contrib-uglify": "~0.5.0",
+      "grunt-contrib-compass": "*",
+      "grunt-contrib-watch": "~0.5.3",
+      "grunt-contrib-concat": "~0.3.0",
+      "grunt-contrib-cssmin": "*"
   }
 }
