--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "jdrive-live",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
+  "author": "TC McCarthy",
   "scripts": {
     "start": "node ./bin/www"
   },
