Major updates. Twitter working

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "debug": "~2.0.0",
     "jade": "~1.6.0",
     "async": "*",
-    "request": "*"
+    "request": "*",
+    "twitter": "*",
+    "socket.io": "*"
   },
 
   "devDependencies": {
