--- a/package.json
+++ b/package.json
@@ -6,27 +6,27 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-
   "dependencies": {
-    "express": "~4.9.0",
+    "async": "^0.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
+    "express": "~4.9.0",
+    "instagram-node": "*",
     "jade": "~1.6.0",
-    "async": "*",
+    "memcached": "^2.1.0",
+    "morgan": "~1.3.0",
     "request": "*",
-    "twitter": "*",
-    "socket.io": "*"
+    "serve-favicon": "~2.1.3",
+    "socket.io": "*",
+    "twitter": "*"
   },
-
   "devDependencies": {
-      "grunt": "~0.4.5",
-      "grunt-contrib-uglify": "~0.5.0",
-      "grunt-contrib-compass": "*",
-      "grunt-contrib-watch": "~0.5.3",
-      "grunt-contrib-concat": "~0.3.0",
-      "grunt-contrib-cssmin": "*"
+    "grunt": "~0.4.5",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-compass": "*",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-cssmin": "*"
   }
 }
