--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "jade": "~1.6.0",
     "memcached": "^2.1.0",
     "morgan": "~1.3.0",
+    "mysql": "^2.9.0",
     "request": "*",
+    "sequelize": "^3.9.0",
+    "sequelize-cli": "^1.9.1",
     "serve-favicon": "~2.1.3",
     "socket.io": "*",
     "twitter": "*"
